desktop new screens complete

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -23,3 +23,9 @@ $color22: #346979;
 $color23: #b5b5bb;
 $color24: rgba(52, 105, 121, 0.05);
 $color25: #c1d8e1;
+$color26: #2078d1;
+$color27: #36b933;
+$color28: #fbe4e8;
+$color29: #fdd4db;
+$color30: #1f1f1f80;
+$color31: #1f1f1f9a;
