--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Hurricane&display=swap");
 @import "./colors";
 @import "./utilities";
 
@@ -1344,7 +1345,7 @@
       }
 
       .body-main {
-        padding: 30px;
+        padding: 20px 30px;
 
         @media screen and (max-width: 1439px) {
           padding-left: 15px;
@@ -1638,7 +1639,8 @@
   }
 }
 
-.create-meeting {
+.create-meeting,
+.create-invoice {
   .form {
     max-width: 650px;
 
@@ -1923,6 +1925,170 @@
         .custom-checkbox-container {
           opacity: 1;
         }
+      }
+    }
+  }
+}
+
+.todo {
+  .table-container {
+    td {
+      &:nth-child(1) {
+        min-width: 40px;
+      }
+
+      &:nth-child(2) {
+        min-width: 200px;
+        font-weight: 600;
+      }
+
+      &:nth-child(3) {
+        min-width: 470px;
+      }
+
+      &:nth-child(4) {
+        min-width: 150px;
+      }
+
+      &:nth-child(5) {
+        min-width: 150px;
+      }
+
+      &:nth-child(6) {
+        min-width: 150px;
+      }
+
+      &:nth-child(7) {
+        min-width: 150px;
+      }
+
+      &:nth-child(8) {
+        min-width: 120px;
+      }
+    }
+  }
+}
+
+.invoice {
+  .table-container {
+    td {
+      &:nth-child(1) {
+        min-width: 140px;
+      }
+
+      &:nth-child(2) {
+        min-width: 150px;
+        font-weight: 600;
+      }
+
+      &:nth-child(3) {
+        min-width: 130px;
+      }
+
+      &:nth-child(4) {
+        min-width: 200px;
+      }
+
+      &:nth-child(5) {
+        min-width: 160px;
+      }
+
+      &:nth-child(6) {
+        min-width: 170px;
+      }
+
+      &:nth-child(7) {
+        min-width: 170px;
+      }
+
+      &:nth-child(8) {
+        min-width: 150px;
+      }
+
+      &:nth-child(9) {
+        min-width: 120px;
+      }
+    }
+  }
+}
+
+.todo-details {
+  .col-xxlg-8 {
+    @media screen and (min-width: 1550px) {
+      // width: 58.33333333%;
+      width: 66.66666667%;
+    }
+  }
+
+  .col-xxlg-4 {
+    @media screen and (min-width: 1550px) {
+      // width: 41.66666667%;
+      width: 33.33333333%;
+    }
+  }
+
+  .details {
+    max-width: 930px;
+  }
+
+  .history-item {
+    border-bottom: 1px solid $color7;
+
+    &:last-child {
+      border-bottom: 0;
+    }
+  }
+}
+
+.e-signature {
+  .no-signature {
+    // min-height: calc(100% - 164px);
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .custom-modal {
+    .selected-text {
+      font-weight: 600;
+    }
+
+    .sign-container {
+      border-radius: 5px;
+      border: 1px solid $color7;
+      background-color: $color9;
+      font-size: 56px;
+      text-align: center;
+      padding: 22px;
+      font-family: "Hurricane", cursive;
+    }
+  }
+
+  .signs-wrap {
+    .btn {
+      width: 40px;
+      height: 40px;
+      background-color: $color30;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        background-color: $color31;
+      }
+    }
+
+    .sign {
+      text-align: center;
+      font-family: "Hurricane", cursive;
+      margin-bottom: 56px;
+      font-weight: normal;
+
+      @media screen and (min-width: 1450px) {
+        font-size: 70px;
       }
     }
   }
