--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -1578,7 +1578,7 @@ hr {
   background-color: $color9;
 }
 
-.tabs {
+.tabs-lg {
   display: flex;
   align-items: center;
   justify-content: space-between;
